--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "lodash": "^3.10.1",
     "react": "16.3.2",
     "react-dom": "16.3.2",
+    "react-google-maps": "^9.4.5",
     "react-redux": "5.0.7",
+    "react-sparklines": "^1.7.0",
     "redux": "4.0.0",
     "redux-promise": "^0.6.0"
   }
